test/spec_vectors/simd_store/fail/module_10.wat
(module (memory 0) (func $v128.store-arg-empty (v128.store)))